--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -1,4 +1,4 @@
-<fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;">
+<fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;height:212px;">
     <legend class="searchbox-border">Vehicle Login</legend>
 
     <div class="fieldContainer  relative left">
@@ -46,8 +46,7 @@
             <option>In active</option>
         </select>
     </div>
-
-        <p class="clear"/>
+    <p class="clear"/>
     <hr class="buttonSpliter" />
     <div class="mainButtonContainer">
         <div>
