--- a/sigmaCabs/app/views/dispatches/vehiclePerformance.html
+++ b/sigmaCabs/app/views/dispatches/vehiclePerformance.html
@@ -1,4 +1,4 @@
-<fieldset class="" style="clear:both;">
-    <legend class="searchbox-border">Vehicle Performance</legend>
-    <div style="min-height: 200px;"></div>
+<fieldset class="">
+	<legend class="searchbox-border">Vehicle Performance</legend>
+	<div style="min-height: 200px;"></div>
 </fieldset>
