--- a/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
+++ b/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
@@ -24,15 +24,13 @@
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
                     <label class="labelCompact">Comments</label>
-                    <textarea data-ng-model="comments" class="cancelBookingComment"></textarea>
+                    <textarea data-ng-model="phoneChangeComments" class="cancelBookingComment"></textarea>
                 </div>
-
             </fieldset>
             <p class="clear"/>
-
         </div>
         <div class="modal-footer">
-            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndClose()" >Save & Close</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndClose()">Save & Close</button>
         </div>
     </div>
 </div>
