--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -1,49 +1,42 @@
 <fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;height:212px;">
     <legend class="searchbox-border">Vehicle Login</legend>
 
-    <div class="fieldContainer  relative left">
-        <label class="labelCompact">Brand Name</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+    <div class="fieldContainer relative left">
+        <label class="labelCompact">Vehicle Name</label>
+        <input type="text" ng-model="vehicleDetails.vehicleName" class="validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact">Vehicle Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact">
+        <select class="validate[maxSize[36]] selectFieldCompact" ng-model="vehicleMainDetials.details.vehicleType" data-ng-options="obj.id as obj.vehicleType for obj in vehicleTypes">
             <option>Choose</option>
         </select>
     </div>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Current Loc</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.location" class="validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
-        <label class="labelCompact">New Loc</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+    <div class="fieldContainer relative right">
+        <label class="labelCompact">New Location</label>
+        <input type="text" ng-model="vehicleDetails.newLocation" class="validate[required,maxSize[128]] textFieldCompact" placeholder=""/>
     </div>
-     <div class="fieldContainer  relative left">
+     <div class="fieldContainer relative left">
         <label class="labelCompact">Reg. No.</label>
-        <input type="text" ng-model="vehicleMainDetials.details.registrationNumber" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.registrationNumber" class="validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right" style="width: 180px;">
         <label class="labelCompact">V.Model</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  style="width:48px;">
-            <option>Year</option>
-        </select>
-        <select class=" validate[maxSize[36]] selectFieldCompact" style="width:48px;">
-            <option>Month</option>
-        </select>
+        <span>{{vehicleMainDetials.details.mfgDate}}</span>
     </div>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative left">
         <label class="labelCompact">V.Condition</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
+        <select class="validate[maxSize[36]] selectFieldCompact" ng-model="vehicleMainDetials.details.condition" data-ng-options="obj.id as obj.condition for obj in vehicleConditionTypes">
             <option>Choose</option>
         </select>
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact">Status</label>
-        <select class="validate[maxSize[36]] selectFieldCompact" ng-model="vehicleMainDetials.details.status" >
+        <select class="validate[maxSize[36]] selectFieldCompact" ng-model="vehicleMainDetials.details.paymentStatus" data-ng-options="obj.id as obj.status for obj in vehicleStatusTypes">
             <option>Choose</option>
-            <option>Active</option>
-            <option>In active</option>
         </select>
     </div>
     <p class="clear"/>
