--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -3,33 +3,31 @@
 
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Login Time</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.loginTime" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
     <div class="fieldContainer  relative right">
         <label class="labelCompact">Vacant Time</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact">
-            <option>Choose</option>
-        </select>
+        <input type="text" ng-model="vehicleMainDetials.details.vacantTime" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">No.of Breaks</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.breakCount" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
     <div class="fieldContainer  relative right">
-        <label class="labelCompact">Overall BT</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <label class="labelCompact" title="Overall Break Time">Overall BT</label>
+        <input type="text" ng-model="vehicleMainDetials.details.breakTime" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
      <div class="fieldContainer  relative left">
         <label class="labelCompact">No.of Bkings</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.bookingCount" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
     <div class="fieldContainer  relative right">
         <label class="labelCompact">Day Collection</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.dayCollection" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Current Loc</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.location" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
 
         <p class="clear"/>
