--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -2,6 +2,7 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
 @import 'signin';
+@import 'dispatch';
 $gray_color_dark: #403F41;
 $gray_dark_border: 1px solid $gray_color_dark;
 $white_color: #ffffff;/*white background*/
