--- a/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
@@ -19,15 +19,15 @@
                 <legend class="searchbox-border">Change Vehicle Location</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Location</label>
-                    <span>location1</span>
+                    <input type="text" ng-model="vehicleDetails.vehicleMainDetials.details.location" maxlength="15" class="textFieldCompact" />
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">New Location</label>
-                    <input type="text" ng-model="newLocation" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="changeLocation.newLocation" maxlength="15" class="textFieldCompact" googleplace/>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Kms</label>
-                    <input type="text" ng-model="currentKms" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="changeLocation.currentKms" maxlength="15" class="textFieldCompact" />
                 </div>
             </fieldset>
             <p class="clear"/>
