--- a/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
@@ -1,60 +1,64 @@
 <fieldset class="bookingFormController left" data-ng-controller="vehicleActivityController" style="margin-left: 7px;">
     <legend class="searchbox-border">Vehicle Allot</legend>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Pickup Date</label>
-        <input type="text" ng-model="bookingDetails.journeyDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.pickupDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact">Pickup Time</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  style="width:48px;">
-            <option>Choose</option>
-        </select>
-        <select class=" validate[maxSize[36]] selectFieldCompact" style="width:48px;">
-            <option>Choose</option>
-        </select>
+        <input type="text" ng-model="vehicleMainDetials.details.pickupTime" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative left">
-        <label class="labelCompact">Vehicle Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-change="fnPopVehicleNames();" data-ng-model="tmpDetails.tmpVehicleType" data-ng-options="obj.id as obj.vehicleType for obj in vehicleTypes"></select>
-    </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Vehicle Name</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-change="fnPopVehicleTypes();" data-ng-model="tmpDetails.tmpVehicleName" data-ng-options="obj.id as obj.vehicleName for obj in vehicleNames"></select>
+        <input type="text" ng-model="vehicleDetails.vehicleName" class="validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative right">
+        <label class="labelCompact">Vehicle Type</label>
+        <select class="validate[maxSize[36]] selectFieldCompact" ng-model="vehicleMainDetials.details.vehicleType" data-ng-options="obj.id as obj.vehicleType for obj in vehicleTypes">
+            <option>Choose</option>
+        </select>
+    </div>
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Pickup</label>
-        <input type="text"  data-ng-class="{fieldExpand: pickupFocused}" data-ng-blur="pickupFocused = false" data-ng-focus="pickupFocused = true" ng-model="bookingDetails.pickupAddress" class=" validate[required,maxSize[128]] textFieldCompact" placeholder=""  googleplace/>
+        <input type="text" ng-model="vehicleMainDetials.details.pickupPlace" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact">Drop Place</label>
-        <input type="text"  data-ng-class="{fieldExpand: pickupFocused}" data-ng-blur="pickupFocused = false" data-ng-focus="pickupFocused = true" ng-model="bookingDetails.pickupAddress" class=" validate[required,maxSize[128]] textFieldCompact" placeholder=""  googleplace/>
+        <input type="text" ng-model="vehicleMainDetials.details.dropPlace" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Cust Name.</label>
-        <input type="text"  data-ng-class="{fieldExpand: pickupFocused}" data-ng-blur="pickupFocused = false" data-ng-focus="pickupFocused = true" ng-model="bookingDetails.pickupAddress" class=" validate[required,maxSize[128]] textFieldCompact" placeholder=""  googleplace/>
+        <input type="text" ng-model="vehicleMainDetials.details.customerName" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact">Cust Ph.</label>
-        <input type="text"  data-ng-class="{fieldExpand: pickupFocused}" data-ng-blur="pickupFocused = false" data-ng-focus="pickupFocused = true" ng-model="bookingDetails.pickupAddress" class=" validate[required,maxSize[128]] textFieldCompact" placeholder=""  googleplace/>
+        <input type="text" ng-model="vehicleMainDetials.details.customerMobile" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Journey Type</label>
         <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
         <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="bookingDetails.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}"></select>
     </div>
-    <div class="fieldContainer  relative left">
+    <!-- <div class="fieldContainer relative left">
+        <label class="labelCompact">Journey Type</label>
+        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
+    </div>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
+        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="bookingDetails.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}"></select>
+    </div> -->
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Landmark1</label>
-        <input type="text" dropFocused ng-model="bookingDetails.landmark1" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.landmark1" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact">Landmark2</label>
-        <input type="text" ng-model="bookingDetails.landmark2" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
+        <input type="text" ng-model="vehicleMainDetials.details.landmark2" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-
-        <p class="clear"/>
+    <p class="clear"/>
     <hr class="buttonSpliter" />
     <div class="mainButtonContainer">
         <div style="text-align: center;">
