--- a/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Kms</label>
-                    <input type="text" ng-model="currentKms" maxlength="15" class="textFieldCompact" value="1523"/>
+                    <input type="text" ng-model="bookingStart.currentKms" maxlength="15" class="textFieldCompact"/>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Dead Mileage</label>
