--- a/sigmaCabs/app/views/dispatches/vehicleLogout.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLogout.html
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" ng-click="close()" aria-hidden="true">×</button>
-            <h4 class="modal-title">Change Vehicle Location</h4>
+            <h4 class="modal-title">Vehicle Logout</h4>
         </div>
         <div class="popupCallerInfo">
             <div class="left innerLabelContainer">
@@ -16,14 +16,14 @@
         </div>
         <div class="modal-body" > 
             <fieldset class="left">
-                <legend class="searchbox-border">Change Vehicle Location</legend>
+                <legend class="searchbox-border">Vehicle Logout</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Location</label>
-                    <input type="text" ng-model="currentLocation" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="logout.currentLocation" maxlength="15" class="textFieldCompact" googleplace />
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Kms</label>
-                    <input type="text" ng-model="currentKms" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="logout.currentKms" maxlength="15" class="textFieldCompact" />
                 </div>
             </fieldset>
             <p class="clear"/>
