--- a/sigmaCabs/app/views/bookings/singleTariff.html
+++ b/sigmaCabs/app/views/bookings/singleTariff.html
@@ -20,8 +20,8 @@
             <div class="left">
               <fieldset class="left">
                 <legend class="searchbox-border">{{ selectedJourneyType.journeyType }} Journey ({{ selectedSubJourneyType.journeyType }})</legend>
-                <div style="height:163px; width:550px;" id="customerBookingGridID" class = "bookingHistoryGrid">
-                  <div class="gridStyle" ng-grid="gridCityPkgOptions" style="height:100%;margin:0px;"></div>
+                <div style="height:400px; width:550px;" id="customerBookingGridID" class = "bookingHistoryGrid">
+                  <div class="gridStyle" ng-grid="gridCityPkgOptions" style="height:395px;margin:0px;"></div>
                 </div>
                </fieldset>
             </div>
