--- a/sigmaCabs/app/views/bookings/singleTariff.html
+++ b/sigmaCabs/app/views/bookings/singleTariff.html
@@ -27,36 +27,93 @@
             </div>
             <div class="left tariffDetailsContainer">
             <fieldset class="left">
-                <legend class="searchbox-border">Tariff Information {{ selectedTariffTypeName }}</legend>
+                <legend class="searchbox-border">Tariff Information</legend>
+                    <div class="displayTextWrapper">
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.vehicleType"></span>
+                        </div>
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.vehicleName"></span>
+                        </div>
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.journeyTypeName"></span>
+                        </div>
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.subJourneyTypeName"></span>
+                        </div>
+                        <p class="clear"/>
+                    <div>
+                    <div class="tariffFieldContainer">
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.pickupPlace"></span>
+                        </div>
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.dropPlace"></span>
+                        </div>
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.pickupDate"></span>
+                        </div>
+                        <div class="tariffFieldContainer left">
+                            <span class = "" data-ng-bind="roData.pickupTime"></span>
+                        </div>
+                        <p class="clear"/>
+                    <div>
 
-                    <div class="tariffFieldContainer">
-                        <label class="labelCompact">Duration</label>
-                        <span class = "bokingLabel" data-ng-bind="duration"></span>
+                    <div class="tariffFieldContainer margin-top10">
+                        <div class=" left margin-right50">
+                            <label class="labelCompact" title="Package Duration">Pkg. Duration</label>
+                            <div class ="left" data-ng-bind="roData.duration"></div>
+                        </div>
+                        <div class=" left">
+                            <label class="labelCompact" title="Package KM">Pkg. KM</label>
+                            <div class ="left" data-ng-bind="roData.km"></div>
+                        </div>
+                        <p class="clear"/>
+                        <div class=" left margin-right50">
+                            <label class="labelCompact" title="Package Amount">Pkg. Amount</label>
+                            <div class ="left" data-ng-bind="roData.amount"></div>
+                        </div>
+                        <div class=" left">
+                            <label class="labelCompact" title="Extra KM charge">Ext. KM Chrg.</label>
+                            <div class ="left" data-ng-bind="roData.extraKmCharge"></div>
+                        </div>
+                        <p class="clear"/>
+                        <div class=" left margin-right50">
+                            <label class="labelCompact" title="Grace Time">Grace Time</label>
+                            <div class ="left" data-ng-bind="roData.graceTime"></div>
+                        </div>
+                        <div class=" left">
+                            <label class="labelCompact" title="Extra Charge">Ext. Chrg.</label>
+                            <div class ="left" data-ng-bind="roData.extraCharges"></div>
+                        </div>
+                        <p class="clear"/>
+                        <div class=" left margin-right50">
+                            <label class="labelCompact" title="Extra Hour Charge">Ext. hr Chrg.</label>
+                            <div class ="left" data-ng-bind="roData.extraHourCharge"></div>
+                        </div>
+                        <div class=" left">
+                            <label class="labelCompact">Discount</label>
+                            <div class ="left" data-ng-bind="roData.discount"></div>
+                        </div>
+                        <p class="clear"/>
+                        <div>
+                            <div class=" left">
+                                <label class="labelCompact">Cust. Grade</label>
+                                <div class ="left" data-ng-bind="roData.customerGrade"></div>
+                            </div> 
+                            <div class=" left">
+                                <label class="labelCompact">Cust. Category</label>
+                                <div class ="left" data-ng-bind="roData.customerCategory"></div>
+                            </div> 
+                            <p class="clear" />                           
+                        </div>
+                        <p class="clear"/>
+                        <div class=" left">
+                            <label class="labelCompact">Comments</label>
+                            <div class ="left" data-ng-bind="roData.comments"></div>
+                        </div> 
                     </div>
-                    <div class="tariffFieldContainer">
-                        <label class="labelCompact">Vehicle Name</label>
-                        <span class = "bokingLabel" data-ng-bind="vehicleName"></span>
-                    </div>
-                    <div class="tariffFieldContainer">
-                        <label class="labelCompact">Kms</label>
-                        <span class = "bokingLabel" data-ng-bind="kms"></span>
-                    </div>
-                    <div class="tariffFieldContainer">
-                        <label class="labelCompact">Price</label>
-                        <span class = "bokingLabel" data-ng-bind="price"></span>
-                    </div>
-                    <div class="tariffFieldContainer">
-                        <label class="labelCompact">Extra Hr price</label>
-                        <span class = "bokingLabel" data-ng-bind="extHrPrice"></span>
-                    </div>
-                    <div class="tariffFieldContainer">
-                        <label class="labelCompact">Extra Km price</label>
-                        <span class = "bokingLabel" data-ng-bind="extKmPrice"></span>
-                    </div>
-                    <div class="tariffFieldContainer">
-                        <label class="labelCompact">Comments</label>
-                        <span class = "bokingLabel" data-ng-bind="comments"></span>
-                    </div>
+
                 </fieldset>    
             </div>
          </div>
